main.tf
data "aws_region" "default" {}

locals {
  region  = "${length(var.region) > 0 ? var.region: data.aws_region.default.name}"
  zone_id = "${length(var.zone_id) > 0 && var.enabled == "true" ? "true" : "false"}"
}

module "label" {
  source     = "git::https://github.com/SweetOps/terraform-null-label.git?ref=tags/0.6.0"
  namespace  = "${var.namespace}"
  name       = "${var.name}"
  stage      = "${var.stage}"
  delimiter  = "${var.delimiter}"
  attributes = "${var.attributes}"
  tags       = "${var.tags}"
  enabled    = "${var.enabled}"
}

module "allowed_cidrs_label" {
  source     = "git::https://github.com/SweetOps/terraform-null-label.git?ref=tags/0.5.4"
  namespace  = "${var.namespace}"
  name       = "${var.name}"
  stage      = "${var.stage}"
  delimiter  = "${var.delimiter}"
  attributes = "${var.attributes}"
  attributes = "${concat(list("cidrs"), var.attributes)}"
  tags       = "${var.tags}"
  enabled    = "${var.enabled == "true" && length(compact(var.allowed_cidrs)) > 0 ? "true" : "false"}"
}

resource "aws_efs_file_system" "default" {
  count            = "${var.enabled == "true" ? 1 : 0}"
  performance_mode = "${var.performance_mode}"
  encrypted        = "${var.encrypted}"
  kms_key_id       = "${var.kms_key_id}"
  tags             = "${module.label.tags}"
}

resource "aws_efs_mount_target" "default" {
  count           = "${var.enabled == "true" ? length(compact(var.subnets)) : 0}"
  file_system_id  = "${aws_efs_file_system.default.id}"
  subnet_id       = "${element(compact(var.subnets), count.index)}"
  security_groups = ["${compact(concat(aws_security_group.default.*.id, aws_security_group.allowed_cidrs.*.id))}"]
}

resource "aws_security_group" "default" {
  count       = "${var.enabled == "true" ? 1 : 0}"
  name        = "${module.label.id}"
  description = "EFS"
  vpc_id      = "${var.vpc_id}"
  tags        = "${module.label.tags}"

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_security_group_rule" "ingress" {
  count                    = "${var.enabled == "true" ? length(compact(var.security_groups)) : 0}"
  type                     = "ingress"
  from_port                = "2049"
  to_port                  = "2049"
  protocol                 = "tcp"
  source_security_group_id = "${element(compact(var.security_groups), count.index)}"
  security_group_id        = "${aws_security_group.default.id}"
}

resource "aws_security_group_rule" "egress" {
  count             = "${var.enabled == "true" ? 1 : 0}"
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.default.id}"
}

resource "aws_security_group" "allowed_cidrs" {
  count       = "${var.enabled == "true" ? signum(length(compact(var.allowed_cidrs))) : 0}"
  name        = "${module.allowed_cidrs_label.id}"
  description = "Allow access to EFS from specefic CIDRs"
  vpc_id      = "${var.vpc_id}"
  tags        = "${module.allowed_cidrs_label.tags}"

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_security_group_rule" "allowed_cidrs" {
  count             = "${var.enabled == "true" ? signum(length(compact(var.allowed_cidrs))) : 0}"
  type              = "ingress"
  from_port         = "2049"
  to_port           = "2049"
  protocol          = "tcp"
  cidr_blocks       = "${var.allowed_cidrs}"
  security_group_id = "${aws_security_group.allowed_cidrs.id}"
}

module "dns" {
  source    = "git::https://github.com/cloudposse/terraform-aws-route53-cluster-hostname.git?ref=tags/0.2.5"
  enabled   = "${local.zone_id}"
  name      = "${module.label.id}"
  namespace = "${var.namespace}"
  stage     = "${var.stage}"
  ttl       = 60
  zone_id   = "${var.zone_id}"
  records   = ["${aws_efs_file_system.default.id}.efs.${local.region}.amazonaws.com"]
}
